--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.13.0",
+    "googleapis": "^140.0.1",
+    "jose": "^5.6.3",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "react": "^18.3.1",
