--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "fluent-ffmpeg": "^2.1.2",
     "genkit": "^1.13.0",
     "googleapis": "^140.0.1",
     "jose": "^5.6.3",
@@ -58,6 +59,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.24",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
